<resources>
    <string name="app_name">SMOPAYE MOBILE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="config">Configuration</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="chargement">Chargement Encours…</string>
    <string name="telephone">Téléphone</string>
    <string name="mdp">Mot de Passe</string>
    <string name="connexion">Connexion</string>
    <string name="forget">Tu as oublié ton mot de passe ?</string>
    <string name="telecollecte_retrait">Télécollecte et Retrait</string>
    <string name="debitCarte">Débit Carte</string>
    <string name="verification">Vérification</string>
    <string name="consulterSolde">Consulter Solde</string>
    <string name="rechargeComptes">Recharge Comptes</string>
    <string name="consulterRecettes">Consulter Recettes</string>
    <string name="montant">Montant</string>
    <string name="passerCarte">Passer la Carte</string>
    <string name="modifier">Modifier</string>
    <string name="modifierOuSupprimer">Modifier ou supprimer</string>
    <string name="card_type">Card Type: </string>
    <string name="type_b">Type B</string>
    <string name="type_a">Type A</string>
    <string name="atqa_data">ATQA: </string>
    <string name="atqb_data">ATQB: </string>
    <string name="pupi_data">PUPI: </string>
    <string name="sak_data">SAK: </string>
    <string name="uid_data">UID: </string>
    <string name="stautDialogAlert">Opération Effectuée avec Succès</string>
    <string name="infoEnTeteAlertDialog">Information</string>
    <string name="descriptionImgAlertDialog">Success</string>
    <string name="retraitChauffeur">Faire un Retrait</string>
    <string name="telecollecteChauffeur">Faire une Télécollecte</string>
    <string name="telecollecte">Télécollecte</string>
    <string name="montantAccumule">Montant accumulé</string>
    <string name="rechargeMaCarte">Recharge mon Compte</string>
    <string name="recharge">Recharge Compte</string>
    <string name="historique">Historique</string>
    <string name="rechargeUneAutreCarte">Recharge d\'un autre Compte</string>
    <string name="rechargeCommerciaux">Recharge pour Commerciaux</string>
    <string name="numCarte">N° Carte</string>
    <string name="numCompte">N° Compte</string>
    <string name="votreNumCarte">Votre Numéro de Compte est :</string>
    <string name="numdelaCarte">Numéro de Compte</string>
    <string name="consulter">Consulter</string>
    <string name="consultSoldeDeLaCarte">Consulter le solde du Compte</string>
    <string name="utiliserAutreCarte">Utiliser une autre Compte</string>
    <string name="next">Passer</string>
    <string name="skip">Ne plus afficher ce message</string>
    <string name="terminer">Terminer</string>
    <string name="slide_1_title">Terminal E-ZPASS</string>
    <string name="slide_2_desc"> Le Terminal E-ZPASS est un terminal de paiement performant au format amovible. Cet appareil de dernière génération permet aux commerçants d\'accepter les paiments partout et à tout moment. </string>
    <string name="cmdTPEZPASS">Commander Terminal E-ZPASS</string>
    <string name="slide_3_title">Carte E-ZPASS</string>
    <string name="slide_3_desc"> Payez sans contrainte de petite monnaie ! Contrôlez vos dépenses ! Protégez-vous contre les risques de vols et de faux billets avec la carte E-ZPASS. </string>
    <string name="cmdCarteEZPASS">Commander votre Carte E-ZPASS</string>
    <string name="listAgentsUsers">Liste Agents et Users</string>
    <string name="ModifAccepteur">Modification</string>
    <string name="SuppAccepteur">Suppression</string>
    <string name="modification">Modification</string>
    <string name="NombreAgents"> Nombre Agents</string>
    <string name="NombreAccepteurs">Nombre Accepteurs</string>
    <string name="AccepteurActifs">Accepteurs Actifs</string>
    <string name="AccepteurInactif">Accepteurs Inactif</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="numero">Téléphone</string>
    <string name="cni">N° Pièce Justificative</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="numeroTel">numéro de téléphone</string>
    <string name="numeroDe">Numéro de</string>
    <string name="categorie">Catégorie</string>
    <string name="statut">STATUT</string>
    <string name="genre">Genre</string>
    <string name="typePj">Type de Pièce</string>
    <string name="admin">Admin &#160; &#160; &#160; &#160;</string>
    <string name="statutAdmin">Détenteur du Compte</string>
    <string name="souscription">Souscription </string>
    <string name="gesComptes">Gestion comptes</string>
    <string name="gesAccepteur">Gestion Accepteurs</string>
    <string name="gesUserAgent">Gestion Agents</string>
    <string name="userGoogle">Utilisateurs Google</string>
    <string name="effectuer">éffectuer</string>
    <string name="numdeCarte">Numéro de Carte</string>
    <string name="numdeCarteB">N°Carte Bénéficiaire</string>
    <string name="numdeCarteDonataire">N° de Compte donataire</string>
    <string name="numdeCarteBeneficiaire">N° de Compte bénéficiaire</string>
    <string name="numdeCarteBeneficiaire1">N° de Carte bénéficiaire</string>
    <string name="gesAccepteurActif">Accepteurs Actifs  &#160; &#160;</string>
    <string name="gesAccepteurInActif">Accepteurs Inactif  &#160; &#160;</string>
    <string name="listAccepteurs">Liste des Accepteurs</string>
    <string name="apropos">Apropos</string>
    <string name="tuto">Tutorial</string>
    <string name="monCompte">Mon Compte</string>
    <string name="etatStatut">Accepteur</string>
    <string name="typeEtatStatut">Chauffeur</string>
    <string name="agents">Agents</string>
    <string name="typeAgents">Détenteur de Compte</string>
    <string name="user">Utilisateur</string>
    <string name="typeUser">Détenteur de Compte</string>
    <string name="subTitle">Recharge</string>
    <string name="donataire">Donataire</string>
    <string name="nomDonataire">Bertin</string>
    <string name="beneficier">Bénéficiaire</string>
    <string name="nomBeneficier">Modjo</string>
    <string name="valeurMontant">4 000 F</string>
    <string name="RechargePourAgent">Recharge pour agent</string>
    <string name="DebitDeCarte">Débit de carte</string>
    <string name="Debit">Débit</string>
    <string name="operateur">OPERATEUR</string>
    <string name="ancienPass">Ancien Mot de Passe</string>
    <string name="nouveauPass">Nouveau Mot de Passe</string>
    <string name="confirmPass">Confirmer Mot de Passe</string>
    <string name="valider">Valider</string>
    <string name="accueilBottomNav">Accueil</string>
    <string name="maCarteBottomNav">Mon Compte</string>
    <string name="pointSmopayeBottomNav">Point Smopaye</string>
    <string name="notificationBottomNav">Notifications</string>
    <string name="offreSmopayeDrawer">Offres Smopaye</string>
    <string name="siteWebDrawer">Site Web</string>
    <string name="questionsFrequentesDrawer">Questions Fréquentes</string>
    <string name="parametreDrawer">Paramètres</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="client">Espace Clients</string>
    <string name="Off">Off</string>
    <string name="On">On</string>
    <string name="utilisateur">Utilisateur &#160;</string>
    <string name="agent">Agent &#160; &#160; &#160; &#160;</string>
    <string name="accepteur">Accepteur &#160;</string>
    <string name="administrateur">Administrateur</string>
    <string name="information">Information</string>
    <string name="champsVide">Un ou plusieurs Champs sont vides</string>
    <string name="moinNeufChiffre">Votre Téléphone contient moin de 9 chiffres</string>
    <string name="bloque">votre compte est bloqué</string>
    <string name="adresse">Adresse</string>
    <string name="connexionserver">Connexion au Serveur</string>
    <string name="attenteReponseServer">Attente d\'une Réponse </string>
    <string name="attenteCarte">Attente d\'une Carte </string>
    <string name="passageCarte">Passer la Carte</string>
    <string name="champsInvlid">Un ou plusieurs champs sont Invalid</string>
    <string name="passDeConfirmation">Le mot de passe et le mot de passe de confirmation sont différents</string>
    <string name="nbrChiffreInferieur">Nombre de Chiffre inférieur à 9</string>
    <string name="transfert">Transfert</string>
    <string name="RenouvelerAbonnement">Renouveler Abonnement</string>
    <string name="operation_fail">Opération Echoué</string>
    <string name="operation_succss">Opération Success</string>
    <string name="transaction_success">Opération Effectuée avec success</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beneficiaire">Téléphone Bénéficiaire</string>
    <string name="montantBeneficiaire">Montant à Payer</string>
    <string name="entrez_le_montant">Entrez le Montant</string>
    <string name="dateExp">Date d\'expiration de la carte</string>
    <string name="typeCarte">Type de carte</string>
    <string name="valeurCarte">Carte magnétique MA1</string>
    <string name="verouCarte">Verouiller la carte</string>
    <string name="balancerCarte">Balancer ce bouton pour empêcher toute transaction venant d\'elle</string>
    <string name="DateExpLongFormat">Lundi, le 25 decembre 2020</string>
    <string name="impossibleUsingCamera">Impossible d\'utiliser la caméra .. Veuillez nous autoriser à utiliser la caméra</string>
    <string name="verouillerCarte">Êtes-vous sure de vouloir vérouiller votre carte?</string>
    <string name="deverouillerCarte">Êtes-vous sure de vouloir Devérouiller votre carte?</string>
    <string name="titreApp">SMOPAYE MOBILE</string>
    <string name="propriete">Propriété SMOPAYE. Tous droits réservés.</string>
    <string name="chatterAvecExpert">Chatter avec un expert SMOPAYE</string>
    <string name="assistanceEnligne">ASSISTANCE EN LIGNE</string>
    <string name="assistanceOncline">Assistance en Ligne</string>
    <string name="contactezNous">Contactez-Nous</string>
    <string name="serviceClient">Service Client</string>
    <string name="boutiqueSmopaye">BOUTIQUES SMOPAYE</string>
    <string name="trouverProduitSmopaye">Retrouvez tous les produits, offres et services dans les boutiques Smpopaye</string>
    <string name="typeAbonnement">Hebdomadaire</string>
    <string name="libelleAbonnementChoisi">Abonnement choisis</string>
    <string name="libelleCarteAbonement">N° Compte</string>
    <string name="numCarteAbonement">12345678</string>
    <string name="connexionIntrouvable">Connexion internet introuvable.</string>
    <string name="msgConnexionInternetIntrouvable">Bien vouloir vérifier votre wifi ou activer les données mobiles dans les paramètres de votre appareil.</string>
    <string name="reessayer">REESSAYER</string>
    <string name="rechercher">Recherche</string>
    <string name="numCarteLong">N° SERIE </string>
    <string name="numCarteCourt">N° CARTE</string>
    <string name="expireDate">30-11-2021</string>
    <string name="typeHexaCourt">N° CARTE SMOPAYE (8 Caractères Hexadécimal)</string>
    <string name="typeHexaLong">N° SERIE SMOPAYE (8 Caractères Hexadécimal)</string>
    <string name="desc_Date">Date d\'expiration de la carte.</string>
    <string name="ecrireAutomatiquement">Méthode Automatique</string>
</resources>