<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_search"
        android:title="@string/rechercher"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>
    <!--app:showAsAction="always"-->

    <item android:id="@+id/apropos"
        android:orderInCategory="100"
        android:icon="@drawable/ic_info_black_24dp"
        app:showAsAction="never"
        android:title="@string/apropos"/>

    <item android:id="@+id/tuto"
        android:orderInCategory="100"
        android:icon="@drawable/ic_description_black_24dp"
        app:showAsAction="never"
        android:title="@string/tuto"/>


</menu>