<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/save_db"
    android:background="@color/white"
    tools:context=".Manage_Cards.SaveInDB.SaveBD">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:foregroundGravity="center_horizontal|center_vertical">

        <include
            android:id="@+id/myToolbar"
            layout="@layout/bar_layout"/>

        <TextView
            android:id="@+id/automatique"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/bgColorStandard"
            android:background="@drawable/edittextborder"
            android:text="@string/ecrireAutomatiquement"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/num_serie_auto"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/bgColorStandard"
                android:text="@string/typeHexaCourt"/>

            <EditText
                android:id="@+id/numCartePriveAutoSaveBD"
                android:textColor="@color/bgColorStandard"
                android:layout_gravity="center"
                android:hint="@string/numCarteCourt"
                android:imeOptions="actionNext"
                android:padding="10dp"
                android:inputType="text"
                android:enabled="true"
                android:maxLength="8"
                android:textStyle="bold|italic"
                android:background="@drawable/edittextborder"
                android:layout_width="match_parent"
                android:textColorHint="@color/bgColorStandard"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:visibility="visible"
            android:orientation="vertical">
            <TextView
                android:id="@+id/numCarte_serie"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/bgColorStandard"
                android:text="@string/typeHexaLong"/>
            <EditText
                android:id="@+id/numCartePublicAutoSaveBD"
                android:textColor="@color/bgColorStandard"
                android:layout_gravity="center"
                android:hint="@string/numCarteLong"
                android:imeOptions="actionNext"
                android:padding="10dp"
                android:textSize="14sp"
                android:maxLength="8"
                android:textStyle="bold|italic"
                android:inputType="text"
                android:enabled="true"
                android:background="@drawable/edittextborder"
                android:layout_width="match_parent"
                android:textColorHint="@color/bgColorStandard"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:visibility="visible"
            android:orientation="vertical">
            <TextView
                android:id="@+id/exp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/bgColorStandard"
                android:text="@string/desc_Date"/>
            <EditText
                android:id="@+id/expire_date"
                android:textColor="@color/bgColorStandard"
                android:layout_gravity="center"
                android:hint="@string/expireDate"
                android:imeOptions="actionNext"
                android:padding="10dp"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                android:inputType="date"
                android:enabled="false"
                android:background="@drawable/edittextborder"
                android:layout_width="match_parent"
                android:textColorHint="@color/bgColorStandard"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginBottom="50dp"
            android:textAlignment="center"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/BtnPasserCarteSaveBDAuto"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:padding="10dp"
                android:paddingStart="30dp"
                android:paddingLeft="30dp"
                android:paddingEnd="30dp"
                android:paddingRight="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:shadowDx="@android:integer/config_longAnimTime"
                android:background="@drawable/btn_rounded"
                android:text="@string/passerCarte" />

            <Button
                android:id="@+id/BtnSaveCarte"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:padding="10dp"
                android:paddingStart="30dp"
                android:paddingLeft="30dp"
                android:paddingEnd="30dp"
                android:paddingRight="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:shadowDx="@android:integer/config_longAnimTime"
                android:background="@drawable/btn_rounded"
                android:text="@string/enregistrer" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>